--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.65",
+        "laravel/passport": "^10.2",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "qirolab/laravel-themer": "^1.5"
@@ -24,10 +25,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-<<<<<<< HEAD
             "Modules\\": "app/Modules/",
-=======
->>>>>>> c71c05adc9b14966338fbae3ae973de2ad00b28b
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
