--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
         "production": "mix --production"
     },
     "dependencies": {
+        "@mapbox/mapbox-gl-geocoder": "^4.7.4",
         "@mdi/js": "^5.9.55",
         "axios": "^0.21.1",
         "chart.js": "^3.3.2",
         "core-js": "^3.6.5",
+        "mapbox-gl": "^2.6.1",
         "numeral": "^2.0.6",
         "vue": "^3.0.0",
         "vue-router": "^4.0.0-0",
